Fix issue in CMS dark mode CSS styling

--- a/static/cms/dark.css
+++ b/static/cms/dark.css
@@ -115,7 +115,6 @@ body {
   color: var(--primary-text-color);
 }
 a {
-  font-size: inherit;
   color: var(--url-text-color);
 }
 h1,
